Clean up Console code base